--- a/json file/projects.json
+++ b/json file/projects.json
@@ -1,7 +1,9 @@
 [
     {
         "name": "Unsplash Clone",
-        "desc": "This website is a clone of 'Unsplash.com' which is a stock photography site, Here I implemented fuctionalities Login & Singup,Uploading Photo from local System, Photo Like, Seaching Photo ect.<br><b>Tech Stack: </b>HTML,CSS,JavaScript.",
+        "desc": "This website is a clone of 'Unsplash.com' which is a stock photography site, Here I implemented fuctionalities Login & Singup,Uploading Photo from local System, Photo Like, Seaching Photo ect.",
+        "src": "https://skillicons.dev/icons?i=html,css,javascript,github",
+        "alter":"HTML,CSS,JavaScript",
         "image": "unplash",
         "category": "frontend",
         "links": {
@@ -11,7 +13,9 @@
     },
     {
         "name": "Dermstore Clone",
-        "desc": "This website is a clone of 'Dermstore.com' which is a skin care and beauty e-commerce site in the United States & here I  implemented some fuctionalities like Login & Singup, product page with sorting, add to cart etc.<br><b>Tech Stack: </b>HTML,CSS,JavaScript.",
+        "desc": "This website is a clone of 'Dermstore.com' which is a skin care and beauty e-commerce site in the United States & here I  implemented some fuctionalities like Login & Singup, product page with sorting, add to cart etc..",
+        "src": "https://skillicons.dev/icons?i=html,css,javascript,github",
+        "alter":"HTML,CSS,JavaScript",
         "image": "dermstore",
         "category": "frontend",
         "links": {
